[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = { version = "1.5.0", features = ["serde"] }
ron = "0.8.1"
serde = { version = "1.0.195", features = ["std", "derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
